<resources>
    <string name="app_name">BatikLens</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kenali_motif_batik_indonesia">Kenali Motif Batik Indonesia</string>
    <string name="identifikasi_motif_batik_dengan_ai_kamera">Identifikasi motif batik dengan Ai Kamera</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="lewati">Lewati</string>
    <string name="pelajari_sejarah_batik">Pelajari Sejarah Batik</string>
    <string name="lestarikan_budaya_indonesia_dengan_mempelajari_sejarahnya">Lestarikan budaya indonesia dengan mempelajari sejarahnya</string>
    <string name="update_info_seputar_batik">Update Info Seputar Batik</string>
    <string name="dapatkan_informasi_terbaru_tentang_batik_melalui_berita_terupdate">Dapatkan informasi terbaru tentang batik melalui berita terupdate!</string>
    <string name="text_berita">Selamat Hari Batik, Semeton! Hari ini, Rabu (2/10/2024), kita merayakan keindahan dan keberagaman batik, salah satu warisan budaya Indonesia yang diakui oleh UNESCO. Sebagai bentuk rasa cinta terhadap batik, mari kita telusuri keunikan batik dari Nusa Tenggara Barat (NTB) dan Nusa Tenggara Timur (NTT). Kedua daerah ini tidak hanya memiliki keindahan alam yang memukau, tetapi juga batik yang kaya akan makna dan simbolisme. Dari motif yang terinspirasi oleh alam hingga teknik pewarnaan yang khas, batik NTB dan NTT menyimpan cerita dan nilai budaya yang patut kita lestarikan. Batik NTB Batik NTB atau sering disebut sebagai Batik Sasambo, merupakan bentuk seni yang kaya akan nilai budaya. Istilah \'Sasambo\' berasal dari akronim tiga suku yang ada di NTB. Kata \'Sa\' berasal dari dua huruf awal suku Sasak, \'Sam\' dari tiga huruf awal suku Sambawa, dan \'Mbo\' dari huruf awal suku Mbojo. Ketiga suku ini telah berkolaborasi untuk menciptakan batik yang indah dan penuh warna yang dikenal dengan nama Batik Sasambo.</string>
    <string name="judul_berita">Mengenal Ragam Batik dari NTB dan NTT, Warisan Budaya Indonesia</string>
    <string name="arti_motif">Motif Batik Sekar Jagad merupakan salah satu jenis motif batik yang berasal dari Yogyakarta dan Solo.</string>
    <string name="judul_artikel">Batik Bercerita Sulawesi Utara Jadi Favorit Diplomat ASEAN</string>
    <string name="sejarah_batik">Sejarah Batik</string>
    <string name="motif_batik_indonesia">Motif Batik Indonesia</string>
    <string name="berita">Berita</string>
    <string name="cari_berita_terupdate_seputar_batik_yuk">Cari Berita terupdate seputar batik yuk!</string>
    <string name="jawa_barat">Jawa Barat</string>
    <string name="batik_mega_mendung">Batik Mega Mendung</string>
    <string name="bantuan">Bantuan</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="masukkan_nama_lengkap">Masukkan Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="simpan">Simpan</string>
    <string name="about">About</string>
    <string name="apa_itu_batiklens">Apa itu BatikLens?</string>
    <string name="bagaimana_cara_untuk_mengetahui_motif_batik">Bagaimana cara untuk mengetahui motif batik?</string>
    <string name="bagaimana_cara_untuk_mengscan_agar_mengetahu_nama_batik">Bagaimana cara untuk mengscan agar mengetahu nama batik?</string>
    <string name="info">Selamat datang di halaman bantuan kami, tempat Anda dapat menemukan segala dukungan dan panduan yang Anda butuhkan untuk memaksimalkan pengalaman penggunaan layanan kami. Temukan panduan, tutorial langkah-demi-langkah, dan jawaban atas pertanyaan umum. Tim kami siap membantu Anda dengan solusi cepat dan tepat, kapan pun Anda memerlukannya.</string>
    <string name="batik_lens_info">Aplikasi ini dirancang untuk membantu pengguna mengenali dan memahami kekayaan motif batik Indonesia. Batik adalah salah satu warisan budaya Indonesia yang kaya, dengan setiap motifnya menyimpan cerita, makna, dan asal-usul yang unik. Sayangnya, banyak orang masih kesulitan mengenali motif-motif batik yang mereka temui, sehingga keunikan dan nilai budaya dari batik kurang dihargai. Saat ini, belum ada platform yang secara khusus menyediakan informasi komprehensif mengenai berbagai motif batik. Untuk menjawab tantangan ini, aplikasi ini memanfaatkan metode Convolutional Neural Network (CNN) untuk mengidentifikasi motif batik melalui gambar, baik yang diambil langsung maupun dari foto yang sudah tersimpan. Dengan penerapan model terbaik dalam pengenalan motif batik, serta penggunaan teknik data augmentation dan transfer learning, aplikasi ini mampu memberikan hasil yang akurat.</string>
    <string name="info_motif">Untuk mengetahu motif batik, anda bisa melakukannya dengan 2 hal yaitu mencari motif batik pada halaman motif bisa mencari berdasarkan daerahnya atau dipencarian, cara kedua yaitu dengan memfoto batik pada halaman kamera dan hasil dari foto akan keluar yaitu informasi tentang nama batik, arti motif dan sejarahnya.</string>
    <string name="tutorial">Untuk memfoto batik agar mengetahui informasi tentang batik anda bisa mengikuti langkah-langkah sebagai berikut : Buka halam kamera Posisikan perangkat/device kearah batik yang ingin anda foto klik ikon bulat untuk memfoto Tunggu hasil analisis hasl keluar dan anda bisa membaca informasi dari hasil foto anda tetapi jika gagal anda bisa mengulang lagi pastikan kamera dalam posisi yang pas dan fokus.</string>
    <string name="batik_parang">Batik Parang</string>
    <string name="capture">Capture</string>
    <string name="home">Home</string>
    <string name="motif">Motif</string>
    <string name="compare">Compare</string>
    <string name="history">History</string>
    <string name="cnn_model">CNN MODEL</string>
    <string name="compare_model">Compare Model</string>
    <string name="vgg19_model">VGG19 MODEL</string>
    <string name="mobilenetv2_model">MOBILENETV2 MODEL</string>
    <string name="inception_v3">Inception V3</string>
    <string name="xception">Xception</string>
    <string name="prediksi">Prediksi</string>
    <string name="detail_classification">Detail Classification</string>
    <string name="nama_model">Nama Model</string>
    <string name="_99_0">99.0</string>
    <string name="name_batik_merak">Name Batik : Merak</string>
    <string name="models">Models</string>
    <string name="confidance">Confidance(%)</string>
    <string name="result">Result</string>
    <string name="nama_batik_ragen_pangantem">Nama Batik : Ragen Pangantem</string>
    <string name="masuk">Masuk</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masukkan_akunmu">Masukkan Akunmu</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="daftar_sini">Daftar Sini</string>
    <string name="belum_punya_akun">Belum punya akun ?</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="lengkapi_informasi_di_bawah_ini">Lengkapi informasi di bawah ini</string>
    <string name="masukkan_kata_sandi">Masukkan Kata Sandi</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="masukkan_ulang_kata_sandi">Masukkan Ulang Kata Sandi</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun">Sudah Punya Akun ?</string>
    <string name="masuk_sini">Masuk Sini</string>
    <string name="vgg19">VGG19</string>
    <string name="vgg16">VGG16</string>
    <string name="flash_button">Flash Button</string>
    <string name="flash">Flash</string>
    <string name="galeri">Galeri</string>
    <string name="tips">Tips</string>
    <string name="coba_sekarang">Coba Sekarang</string>
    <string name="pindai_hanya_satu_jenis_batik">Pindai hanya satu jenis batik</string>
    <string name="pastikan_gambar_tidak_blur">Pastikan gambar tidak blur</string>
    <string name="posisikan_batik_dalam_frame">Posisikan batik dalam frame</string>
    <string name="classification">Classification</string>
    <string name="history_pemindaian">History Pemindaian</string>

    <string-array name="data_name">
        <item>Barong</item>
        <item>Sidoluhur</item>
        <item>Merak</item>
        <item>Ondel-Ondel</item>
        <!--        <item>Megamendung</item>-->
        <!--        <item>Kawung</item>-->
    </string-array>

    <string-array name="data_link">
        <item>https://firebasestorage.googleapis.com/v0/b/newsapi-442013.firebasestorage.app/o/DataBatik%2FBali_Barong.jpg?alt=media&amp;token=7658f0d2-14fb-4489-b080-fa1dc1cccc02</item>
        <item>https://firebasestorage.googleapis.com/v0/b/newsapi-442013.firebasestorage.app/o/DataBatik%2FJawaTengah_Sidoluhur.jpg?alt=media&amp;token=71b84348-c327-4fac-9335-1f3c5fb5bbf7</item>
        <item>https://firebasestorage.googleapis.com/v0/b/newsapi-442013.firebasestorage.app/o/DataBatik%2FBali_Merak.jpg?alt=media&amp;token=c104ca33-58a0-416b-bb9d-e05e5d5639dd</item>
        <item>https://firebasestorage.googleapis.com/v0/b/newsapi-442013.firebasestorage.app/o/DataBatik%2FJakarta_Ondel_Ondel.jpg?alt=media&amp;token=38b4b02b-bc11-4844-a06d-2dea4ce39322</item>
        <item>https://firebasestorage.googleapis.com/v0/b/motifhome-442219.firebasestorage.app/o/Jawa_Barat_Megamendung.jpg?alt=media&amp;token=1ab3f34d-190d-40d3-9f5b-5f81b7c342dc</item>
        <item>https://firebasestorage.googleapis.com/v0/b/newsapi-442013.firebasestorage.app/o/DataBatik%2FYogyakarta_Kawung.jpg?alt=media&amp;token=a8c3897e-001e-4bcd-8332-eba92447657f</item>
    </string-array>

    <string-array name="data_image">
        <item>@drawable/bali_barong</item>
        <item>@drawable/jawatengah_sidoluhur</item>
        <item>@drawable/bali_merak</item>
        <item>@drawable/jakarta_ondel_ondel</item>
    </string-array>
</resources>