<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/button_maincolor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10sp"
        android:gravity="center_vertical"
        android:text="@string/posisikan_batik_dalam_frame"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/scan_putih" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:drawablePadding="10sp"
        android:gravity="center_vertical"
        android:text="@string/pastikan_gambar_tidak_blur"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/photo_putih" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindai_hanya_satu_jenis_batik"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:drawablePadding="10sp"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/motif_putih" />

    <Button
        android:id="@+id/masuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:backgroundTint="@color/thirdColor"
        android:includeFontPadding="false"
        android:text="@string/coba_sekarang"
        android:textColor="@color/black" />

</LinearLayout>