<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.about.AboutActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bantuan"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvArtikel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:justificationMode="inter_word"
                android:text="@string/info"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/batikLens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingHorizontal="40dp"
                android:paddingVertical="10dp"
                android:text="@string/apa_itu_batiklens"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:drawableEndCompat="@drawable/arrow_up_24" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="20dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvBatikLens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:justificationMode="inter_word"
                android:text="@string/batik_lens_info"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/motifBatik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingHorizontal="40dp"
                android:paddingVertical="10dp"
                android:text="@string/bagaimana_cara_untuk_mengetahui_motif_batik"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:drawableEndCompat="@drawable/arrow_up_24" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="20dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvMotifBatik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:justificationMode="inter_word"
                android:text="@string/info_motif"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tutorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingHorizontal="40dp"
                android:paddingVertical="10dp"
                android:text="@string/bagaimana_cara_untuk_mengscan_agar_mengetahu_nama_batik"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:drawableEndCompat="@drawable/arrow_up_24" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="20dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvTutorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:justificationMode="inter_word"
                android:text="@string/tutorial"
                android:textColor="@color/black" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>