<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.compare.CompareModelFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Classification"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/compare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/compare_model"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/buttonToggleGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/compare"
            app:selectionRequired="true"
            app:singleSelection="false">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/inceptionBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/inception_v3"
                app:backgroundTint="@color/selection_model"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
                app:strokeColor="@color/selection_model"
                app:strokeWidth="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mobilenetButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mobilenetv2_model"
                app:backgroundTint="@color/selection_model"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
                app:strokeColor="@color/selection_model"
                app:strokeWidth="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/xceptionBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/xception"
                app:backgroundTint="@color/selection_model"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
                app:strokeColor="@color/selection_model"
                app:strokeWidth="2dp" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listDataLatih"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/predict"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonToggleGroup" />

        <Button
            android:id="@+id/predict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_maincolor"
            android:drawableTint="@color/white"
            android:includeFontPadding="false"
            android:text="@string/prediksi"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/listDataLatih"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>