<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.detailCompare.DetailCompareActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/detail_classification"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivPoto"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginHorizontal="20dp"
                app:srcCompat="@drawable/bali_merak"
                android:scaleType="center"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/motifName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_batik_merak"
                android:paddingHorizontal="20dp"
                android:paddingTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/ivPoto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@+id/motifName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingVertical="20dp"
                    android:gravity="center"
                    android:background="@drawable/button_maincolor"
                    android:includeFontPadding="false"
                    android:text="@string/models"
                    android:textColor="@color/black"
                    app:drawableTint="@color/white" />

                <View
                    android:layout_width="5dp"
                    android:layout_height="2dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingVertical="20dp"
                    android:gravity="center"
                    android:background="@drawable/button_maincolor"
                    android:includeFontPadding="false"
                    android:text="@string/confidance"
                    android:textColor="@color/black"
                    app:drawableTint="@color/white" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listModel"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll" />

            <LinearLayout
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/listModel">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/result"
                    android:textSize="20sp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvModel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/nama_batik_ragen_pangantem"
                    android:textSize="15sp"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>