<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.editProfile.EditProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="175dp"
                android:layout_height="175dp"
                app:strokeWidth="2dp"
                app:strokeColor="@color/black"
                android:layout_gravity="center_horizontal"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivPoto"
                    android:layout_width="175dp"
                    android:layout_height="175dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/baseline_person_24"
                    app:strokeColor="@color/black"
                    app:strokeWidth="3dp" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="11dp"
                android:text="@string/nama_lengkap"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/mainColor"
                app:boxStrokeWidth="2dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="false"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/namaLengkap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_nama_lengkap"
                    android:includeFontPadding="false"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="11dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/mainColor"
                app:boxStrokeWidth="2dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="false"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:includeFontPadding="false"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/simpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_maincolor"
                android:drawableTint="@color/white"
                android:includeFontPadding="false"
                android:text="@string/simpan"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>